<resources>
    <string name="app_name">Royal Game of Ur</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="delete_all">Deleted all the games</string>
    <string name="undo_string">undo</string>

    <string name="pieces_leftp1">2</string>
    <string name="pieces_leftp2">2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_name">Enter name player 1</string>
    <string name="welcome">Welcome to the Royal Game of Ur</string>
    <string name="playername">PlayerName</string>
    <string name="enter_your_name2">Enter name player 2</string>
    <string name="thrown_score">Dice:</string>
    <string name="roll">Roll</string>
    <string name="play">Play</string>
    <string name="in">In</string>
    <string name="moves">moves!</string>
    <string name="_5">5</string>
    <string name="name">Name</string>
</resources>